fix: define names for models being generated from hey-api. This way we avoid abominations like DtoExperienceDto
